# tessera

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agent.md  lra.md  rust-toolchain.toml
.boundary-audit/: A1_numeric.md  A2_index.md  A3_miri.md  A3_static.md  A4_robustness.md  A5_perf.md  A6_realism.md  consolidate.sh
.github/workflows/: ci.yml
.long-run-agent/: .lra_version  config.json  constitution.yaml  quality_report.json  task_list.json
.long-run-agent/tasks/: task_001.md  task_002.md  task_003.md  task_004.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  task_011.md  task_012.md
docs/: AGENT.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  ARCHITECTURE_v3.md  ARCHITECTURE_v3_1.md  ARCHITECTURE_v4.md  CLAUDE.md  DECISIONS.md  EXPERIMENT_brittleness_realism.md  SIGMA4_SPEC_v1.md  SIGMA4_SPEC_v1_1.md  global_capital_players_full_index.csv  index.html
examples/: brittleness_experiment.rs  sentiment_cascade_demo.rs  systemic_risk_demo.rs
src/: cascade.rs  constants.rs  constraint.rs  entity.rs  lib.rs  loader.rs  matrix.rs  protocol.rs  server.rs  simplex.rs
tests/: index_boundary.rs  memsafety_miri.rs  numeric_boundary.rs  perf_boundary.rs  protocol_loader_boundary.rs
