[package]
name = "tessera"
version = "0.1.0"
edition = "2021"
description = "Tessera: deterministic μs-level sparse threshold-cascade simulator (Rust)"
license = "MIT OR Apache-2.0"
rust-version = "1.99.0"
repository = "https://github.com/hotjp/tessera"
homepage = "https://hotjp.github.io/tessera/"
readme = "README.md"
keywords = ["cascade", "graph", "simulation", "simd", "network-science"]
categories = ["science", "simulation"]

[lib]
name = "tessera"
path = "src/lib.rs"

# 基准测试（后续 task 启用，目前仅声明 dev-dep）
# [[bench]]
# name = "..."
# harness = false

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
tokio-rustls = "0.26"
rustls = "0.23"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
